rusqlite_migration/src/tests/snapshots/rusqlite_migration__tests__builder__valid_index.snap
---
source: rusqlite_migration/src/tests/builder.rs
expression: "MigrationsBuilder::from_iter(ms).edit(1, move |m|\nm.down(\"DROP TABLE t1;\")).edit(2, move |m|\nm.down(\"DROP TABLE t2;\")).finalize()"
snapshot_kind: text
---
Migrations {
    ms: [
        M {
            up: "CREATE TABLE t1(a);",
            up_hook: None,
            down: Some(
                "DROP TABLE t1;",
            ),
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
        M {
            up: "CREATE TABLE t2(a);",
            up_hook: None,
            down: Some(
                "DROP TABLE t2;",
            ),
            down_hook: None,
            foreign_key_check: false,
            comment: None,
        },
    ],
}
